@@ -1,3 +1,7 @@
+version 2.7.18
+--------------
+Thanks to mannio on dar-support mailing-list for bug report
+
 version 2.7.17
 --------------
 Thanks to Mannino on dar-support mailing-list for bug report. Thanks
